- The EIT scan now skips scanList entries if a device is already tuned to that
  transponder.
- The EIT scan is no longer inhibited if a timer is in VPS margin or needs the
  transponder.
- If the current channel is no longer available because of a VPS timer entering the
  VPS margin, live view now switches to the channel of that timer.
- A device is now always kept occupied if a timer is in VPS margin or needs the
  transponder (thanks to Markus Ehrnsperger).

2024-07-08: Version 2.6.8

- Updated the Italian OSD texts (thanks to Diego Pierotto).
- Fixed a possible access of a deleted object in the EIT scanner.
- Fixed setting T2 system ID from NIT (thanks to Stefan Herdler).
- When starting an editing process, VDR now first checks whether there is enough
  free disk space to take up the edited version of the recording.
- Added an EPG bugfix for broadcasters who put literal "\n" strings in their EPG.
  Note that the string version of strreplace() has been modified, so that it
  replaces all occurrences of the search string, not just the first one.
- Removed leftover cMenuRecordings::SetPath().
- The EIT scanner now checks whether there is a proper device before adding a
  channel to the scan list.
- Unused devices can now be put into a power save mode (suggested by Markus
  Ehrnsperger). Device plugins need to implement the new function
  cDevice::SetPowerSaveMode() to make this work.
- Implemented power save mode for cDvbDevice (based on a patch from Markus
  Ehrnsperger).
- Added 'lnbPowerTurnedOn = false' to cDvbTuner::ProvidesFrontend() (suggested by
  Markus Ehrnsperger).

2024-07-13:

- Fixed a crash in strreplace() for multiple replacements with strings of different
  lengths (reported by Markus Ehrnsperger).
- Fixed handling of cSkinDisplayMenu::GetTextAreaFont() (reported by Matthias Senzel).
- Fixed a timeout in cDvbDevice while tuning after the frontend has been reopened.
- Fixed setting the editable width in the LCARS skin (reported by Matthias Senzel).